k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pohapp-backend
  labels:
    name: pohapp-backend
